# azure-smart-pot

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
azure-server/: .dockerignore  Cargo.toml  Dockerfile  run.sh
azure-server/src/: azure.rs  core.rs  lib.rs
azure-server/src/core/: azure.rs  error.rs  result.rs  shared.rs
esp32-pot/: .dockerignore  Cargo.toml  Dockerfile  run.sh
esp32-pot/.cargo/: config.toml
esp32-pot/src/: core.rs  lib.rs
esp32-pot/src/core/: error.rs  esp.rs
esp32-pot/src/core/esp/: bh1750.rs  board.rs  dht_sensor.rs  ds18b20.rs  server.rs
shared/: Cargo.toml
shared/src/: lib.rs
smart-pot-core/: Cargo.toml
smart-pot-core/src/: lib.rs
