[package]
name = "azure-server"
version = "0.1.0"
edition = "2024"

[dependencies]
smart-pot-core = { path = "../smart-pot-core" }
azure_iot_sdk = { version = "0.8.0", features = [
    "with-provision",
    "c2d-messages",
    "direct-methods",
    "twin-properties",
    "error-handling-messages",
], default-features = false }
tokio = { version = "1.44.1", features = ["rt"] }
mod_interface = "0.30.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
serde_json = "1.0"
log = "0.4.26"
chrono = { version = "0.4.40", features = ["serde"] }
env_logger = "0.11.8"
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["json"] }
